# zec-nullifier-script

./: Cargo.toml  collect_nullifiers.sh  example.txt
src/: main.rs
